--- a/exercicio_html/index.html
+++ b/exercicio_html/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Formulário de Cadastro</title>
 </head>
 <body>
     <h1>Formulários</h1>
