--- a/exercicio_html/index.html
+++ b/exercicio_html/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Cadastro</title>
+    <title>Formulário</title>
 </head>
 <body>
-    <h1>Formulários</h1>
+    <h1>Formulário de Cadastro</h1>
     <form action="">
         <label for="text">Nome</label>
         <input type="text" placeholder="Seu Nome" id="Nome"><br>
