--- a/exercicio_html/index.html
+++ b/exercicio_html/index.html
@@ -2,20 +2,20 @@
 <html lang="pt-br">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Cadastro</title>
+    <title>Formulário</title>
 </head>
 <body>
-    <h1>Formulários</h1>
+    <h1>Formulário de Cadastro</h1>
     <form action="">
         <label for="text">Nome</label>
-        <input type="text" placeholder="Seu Nome" id="Nome"><br>
+        <input type="text" placeholder="Seu Nome" id="text"><br>
         <label for="email">e-mail</label>
         <input type="email" placeholder="Seu e-mail" id="email"><br>
-        <label for="tel">Telefone</label>
-        <input type="tel" placeholder="Seu Telefone" id="Telefone"><br>
+        <label for="password">Senha</label>
+        <input type="password" placeholder="Senha" id="password"><br><br>
         <button type="submit">
             Cadastrar
-        </button>
+        </button>   
         <button type="reset">
             Limpar
         </button>
